<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    android:background="@color/background"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitulo"
        android:textColor="@color/muted_foreground"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGeneral"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
        android:padding="30dp"
        >
        <TextView
            android:id="@+id/perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_cliente"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toBottomOf="@+id/perfil"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/card"
            app:strokeWidth="2dp"
            app:strokeColor="@color/border"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_dog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/cliente"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/dueño"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_veterinario"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cv_cliente"
            app:cardCornerRadius="16dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/border"
            android:backgroundTint="@color/card"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_stethoscope" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/veterinario"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/profesional"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_cliente"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/sidebar_accent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tu_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/foreground"
                android:textSize="14sp"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contraseña"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/tvContraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tiEmail"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/sidebar_accent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvContraseña"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tu contraseña"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/foreground"
                android:textSize="14sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/primary"
            android:padding="14dp"
            android:text="Iniciar Sesión"
            android:textColor="@color/primary_foreground"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPassword" />

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="¿No tienes cuenta? Regístrate"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>